--- a/Source/WebInspectorUI/UserInterface/Views/ButtonNavigationItem.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ButtonNavigationItem.css
@@ -41,6 +41,10 @@
     -webkit-padding-start: 4px;
 }
 
+.tab-bar > .navigation-bar .item.button.image-and-text > span {
+    padding-bottom: 0;
+}
+
 .navigation-bar .item.button.text-only {
     padding: 1px 8px 3px;
     margin: 0 2px; /* WI.ButtonNavigationItem.prototype.get totalMargin */
@@ -74,8 +78,29 @@
     color: var(--glyph-color-disabled);
 }
 
+.navigation-bar .item.button > img {
+    width: 100%;
+    height: 100%;
+}
+
+.navigation-bar .item.button.disabled > img {
+    opacity: 0.3;
+}
+
+body:matches(.window-inactive, .window-docked-inactive) .navigation-bar .item.button > img {
+    opacity: 0.6;
+}
+
+body:matches(.window-inactive, .window-docked-inactive) .navigation-bar .item.button.disabled > img {
+    opacity: 0.18;
+}
+
 @media (prefers-color-scheme: dark) {
     .navigation-bar .item.button {
         color: var(--text-color-secondary);
+    }
+
+    .navigation-bar .item.button.disabled > img {
+        filter: invert();
     }
 }
