--- a/Source/WebInspectorUI/UserInterface/Views/Main.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Main.css
@@ -64,10 +64,6 @@ body {
     background-color: var(--background-color-content);
 }
 
-body.docked.bottom {
-    border-top: 1px solid var(--border-color);
-}
-
 body.docked.right {
     border-left: 1px solid var(--border-color);
 }
@@ -113,12 +109,23 @@ body.docked.left #docked-resizer {
     cursor: col-resize;
 }
 
-body.docked.bottom #toolbar {
-    cursor: row-resize;
+#undocked-title-area {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: var(--undocked-title-area-height);
+    background-image: linear-gradient(to bottom, hsl(0, 0%, 92%), hsl(0, 0%, 87%));
+    box-shadow: inset hsla(0, 0%, 100%, 0.5) 0 1px 1px;
 }
 
-body.docked.bottom #toolbar .item:not(.flexible-space) {
-    cursor: default;
+body.docked #undocked-title-area {
+    display: none;
+}
+
+body.window-inactive #undocked-title-area {
+    background-color: hsl(0, 0%, 96%);
+    background-image: none;
 }
 
 input[type=range] {
@@ -137,7 +144,7 @@ input[type=range]::-webkit-slider-runnable-track {
 
 #main {
     position: absolute;
-    top: calc(var(--toolbar-height) + var(--tab-bar-height));
+    top: calc(var(--undocked-title-area-height) + var(--tab-bar-height));
     left: 0;
     right: 0;
     bottom: 0;
@@ -475,6 +482,15 @@ body[dir=rtl] [dir=ltr] .go-to-arrow {
     }
 }
 
+@keyframes tab-bar-console-item-pulse {
+    50% { opacity: 0.6; }
+}
+
+.tab-bar > .navigation-bar :matches(.console-warnings, .console-errors):not(.disabled).pulsing {
+    animation-name: tab-bar-console-item-pulse;
+    animation-duration: 0.75s;
+}
+
 .device-settings-content {
     position: relative;
     padding: 0 4px;
@@ -539,6 +555,15 @@ body[dir=rtl] .device-settings-content > .reference-page-link-container {
 }
 
 @media (prefers-color-scheme: dark) {
+    #undocked-title-area {
+        background-image: linear-gradient(to bottom, hsl(0, 0%, 26%), hsl(0, 0%, 23%));
+        box-shadow: none;
+    }
+
+    body.window-inactive #undocked-title-area {
+        background-color: var(--background-color);
+    }
+
     .go-to-arrow {
         filter: invert();
     }
