--- a/Source/WebInspectorUI/UserInterface/Views/TabBar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/TabBar.css
@@ -25,24 +25,15 @@
 
 .tab-bar {
     position: absolute;
-    top: var(--toolbar-height);
+    top: var(--undocked-title-area-height);
     left: 0;
     right: 0;
     height: var(--tab-bar-height);
 
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    border-bottom: var(--tab-item-medium-border-style);
 
     background-image: linear-gradient(to bottom, hsl(0, 0%, 78%), hsl(0, 0%, 72%));
     background-size: 100% 200%;
-
-    white-space: nowrap;
-    overflow: hidden;
-
-    outline: none;
 
     --tab-item-dark-border-color: hsl(0, 0%, 59%);
     --tab-item-medium-border-color: hsl(0, 0%, 65%);
@@ -53,30 +44,85 @@
     --tab-item-light-border-style: 1px solid var(--tab-item-light-border-color);
 }
 
-body.window-inactive .tab-bar {
-    border-bottom-color: var(--tab-item-light-border-color);
-
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar {
     background-image: none !important;
     background-color: var(--tab-item-extra-light-border-color) !important;
 }
 
-.tab-bar > .top-border {
+.tab-bar > .border {
     position: absolute;
-    top: 0;
     left: 0;
     right: 0;
+    z-index: 10;
     height: 1px;
-
     background-color: var(--tab-item-medium-border-color);
-
-    z-index: 0;
 }
 
-body.window-inactive .tab-bar > .top-border {
+.tab-bar > .border.top {
+    top: 0;
+}
+
+.tab-bar > .border.bottom {
+    bottom: 0;
+}
+
+body.docked.bottom .tab-bar > .border.top {
+    filter: brightness(80%);
+}
+
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .border {
     background-color: var(--tab-item-light-border-color);
 }
 
-.tab-bar > .item {
+@media (-webkit-max-device-pixel-ratio: 1) {
+    body.docked:matches(.right, .left):not(.window-docked-inactive) .tab-bar > .border.top {
+        background-color: transparent;
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 2) {
+    body.docked:matches(.right, .left):not(.window-docked-inactive) .tab-bar > .border.top {
+        height: 0.5px !important;
+    }
+}
+
+.tab-bar > .navigation-bar {
+    height: var(--tab-bar-height);
+}
+
+.tab-bar > .navigation-bar > .item.group > .item {
+    width: auto !important;
+    margin: 0 4px !important;
+    padding: 0 !important;
+}
+
+.tab-bar > .navigation-bar > .item.group > .item:nth-child(1 of :not(.hidden)) {
+    -webkit-margin-start: 12px !important;
+}
+
+.tab-bar > .navigation-bar > .item.group > .item:nth-last-child(1 of :not(.hidden)) {
+    -webkit-margin-end: 12px !important;
+}
+
+.tab-bar > .navigation-bar .item.divider {
+    margin-top: 1px;
+    background-color: var(--tab-item-medium-border-color);
+}
+
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .navigation-bar > .item.divider {
+    background-color: var(--tab-item-light-border-color);
+}
+
+.tab-bar > .tabs {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.tab-bar > .tabs > .item {
     display: flex;
     flex-grow: 1;
 
@@ -94,8 +140,6 @@ body.window-inactive .tab-bar > .top-border {
     background-image: linear-gradient(to bottom, hsl(0, 0%, 78%), hsl(0, 0%, 72%));
     background-size: 100% 200%;
 
-    border-top: var(--tab-item-medium-border-style);
-
     height: 100%;
     line-height: 15px;
     outline: none;
@@ -106,54 +150,59 @@ body.window-inactive .tab-bar > .top-border {
     /* transition-delay: 50ms; */
 }
 
-.tab-bar.calculate-width > .item {
+.tab-bar > .tabs.calculate-width > .item {
     flex: initial;
 }
 
-body[dir=ltr] .tab-bar > :nth-child(n + 2 of .item),
-body[dir=ltr] .tab-bar.dragging-tab > .item.selected {
+body[dir=ltr] .tab-bar > .tabs > .item:not(:first-child),
+body[dir=ltr] .tab-bar > .tabs:not(.hide-border-start) > .item:first-child,
+body[dir=ltr] .tab-bar > .tabs.dragging-tab > .item.selected,
+body[dir=rtl] .tab-bar > .tabs:not(.hide-border-end) > .item:last-child {
     border-left: var(--tab-item-medium-border-style);
 }
 
-body[dir=rtl] .tab-bar > :nth-child(n + 2 of .item),
-body[dir=rtl] .tab-bar.dragging-tab > .item.selected {
+body[dir=ltr] .tab-bar > .tabs:not(.hide-border-end) > .item:last-child,
+body[dir=rtl] .tab-bar > .tabs > .item:not(:first-child),
+body[dir=rtl] .tab-bar > .tabs:not(.hide-border-start) > .item:first-child,
+body[dir=rtl] .tab-bar > .tabs.dragging-tab > .item.selected {
     border-right: var(--tab-item-medium-border-style);
 }
 
-.tab-bar > .item.pinned {
+.tab-bar > .tabs > .item.pinned {
     width: 24px;
     flex: none;
     justify-content: center;
 }
 
-.tab-bar > .item.pinned.tab-picker {
+.tab-bar > .tabs > .item.pinned.tab-picker {
     width: 18px;
     min-width: initial;
 }
 
-.tab-bar > .item:not(.disabled).selected {
-    border-top-color: hsl(0, 0%, 74%);
+.tab-bar > .tabs > .item:not(.disabled).selected {
     background-image: linear-gradient(to bottom, hsl(0, 0%, 87%), hsl(0, 0%, 82%));
     background-size: 100% 100%;
 }
 
-.tab-bar:not(.animating) > .item:not(.selected, .disabled):hover {
+.tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover {
     background-image: linear-gradient(to bottom, hsl(0, 0%, 67%), hsl(0, 0%, 64%));
-    border-top-color: var(--tab-item-dark-border-color);
 }
 
-body[dir=ltr] .tab-bar:not(.animating) > .item:not(.selected, .disabled):hover,
-body[dir=ltr] .tab-bar:not(.animating) > .item:not(.selected, .disabled):hover + .item {
+body[dir=ltr] .tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover,
+body[dir=ltr] .tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover + .item,
+body[dir=rtl] .tab-bar > .tabs:not(.animating) > .item:last-child:not(.selected, .disabled):hover {
     border-left-color: var(--tab-item-dark-border-color);
 }
 
-body[dir=rtl] .tab-bar:not(.animating) > .item:not(.selected, .disabled):hover,
-body[dir=rtl] .tab-bar:not(.animating) > .item:not(.selected, .disabled):hover + .item {
+body[dir=ltr] .tab-bar > .tabs:not(.animating) > .item:last-child:not(.selected, .disabled):hover,
+body[dir=rtl] .tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover,
+body[dir=rtl] .tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover + .item {
     border-right-color: var(--tab-item-dark-border-color);
 }
 
-body.window-inactive .tab-bar > .item {
-    border-top-color: var(--tab-item-light-border-color) !important;
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs > .item {
+    border-right-color: var(--tab-item-light-border-color) !important;
+    border-left-color: var(--tab-item-light-border-color) !important;
 
     background-image: none !important;
     background-color: var(--tab-item-extra-light-border-color) !important;
@@ -161,20 +210,12 @@ body.window-inactive .tab-bar > .item {
     transition: none;
 }
 
-body[dir=ltr].window-inactive .tab-bar > .item {
-    border-left-color: var(--tab-item-light-border-color) !important;
-}
-
-body[dir=rtl].window-inactive .tab-bar > .item {
-    border-right-color: var(--tab-item-light-border-color) !important;
-}
-
-body.window-inactive .tab-bar > .item.selected {
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs > .item.selected {
     background-image: none !important;
     background-color: hsl(0, 0%, 96%) !important;
 }
 
-.tab-bar > .item > .close {
+.tab-bar > .tabs > .item > .close {
     width: 16px;
     height: 16px;
 
@@ -195,36 +236,28 @@ body.window-inactive .tab-bar > .item.selected {
     -webkit-margin-end: 4px;
 }
 
-body:not(.window-inactive) .tab-bar > .item:hover > .close {
+body:not(.window-inactive) .tab-bar > .tabs > .item:hover > .close {
     opacity: 0.6;
 }
 
-body:not(.window-inactive) .tab-bar.single-tab > .item.default-tab:hover > .close {
-    opacity: 0;
-}
-
-.tab-bar.single-tab > .item.default-tab > .close {
-    pointer-events: none;
-}
-
-.tab-bar > .item > .close:hover {
+.tab-bar > .tabs > .item > .close:hover {
     background-color: hsla(0, 0%, 0%, 0.2);
 }
 
-.tab-bar > .item > .close:active {
+.tab-bar > .tabs > .item > .close:active {
     opacity: 0.8 !important;
 }
 
-.tab-bar > .item > .flex-space {
+.tab-bar > .tabs > .item > .flex-space {
     display: flex;
     flex: 1;
 }
 
-.tab-bar > .item.ephemeral > .flex-space:last-child {
+.tab-bar > .tabs > .item.ephemeral > .flex-space:last-child {
     -webkit-margin-end: 16px;
 }
 
-.tab-bar > .item > .icon {
+.tab-bar > .tabs > .item > .icon {
     width: 16px;
     height: 16px;
 
@@ -236,28 +269,28 @@ body:not(.window-inactive) .tab-bar.single-tab > .item.default-tab:hover > .clos
     -webkit-user-drag: none;
 }
 
-.tab-bar > .item.pinned > .icon {
+.tab-bar > .tabs > .item.pinned > .icon {
     width: 15px;
     height: 15px;
     min-width: 15px;
     min-height: 15px;
 }
 
-.tab-bar > .item.selected > .icon {
+.tab-bar > .tabs > .item.selected > .icon {
     opacity: 0.7;
 }
 
-.tab-bar > .item.disabled > .icon {
+.tab-bar > .tabs > .item.disabled > .icon {
     opacity: 0.35;
 }
 
 @media not (prefers-color-scheme: dark) {
-    .tab-bar:not(.animating) > .item:not(.selected, .disabled):hover > .icon {
+    .tab-bar > .tabs:not(.animating) > .item:not(.selected, .disabled):hover > .icon {
         opacity: 0.6;
     }
 }
 
-.tab-bar > .item > .title {
+.tab-bar > .tabs > .item > .title {
     color: hsla(0, 0%, 0%, 0.55);
 
     display: flex;
@@ -266,11 +299,11 @@ body:not(.window-inactive) .tab-bar.single-tab > .item.default-tab:hover > .clos
     max-width: 400px;
 }
 
-.tab-bar:not(.collapsed) > .item > .title {
+.tab-bar > .tabs:not(.collapsed) > .item > .title {
     -webkit-margin-start: 6px;
 }
 
-.tab-bar > .item > .title > .content {
+.tab-bar > .tabs > .item > .title > .content {
     min-width: 0;
     width: 100%;
     overflow: hidden;
@@ -278,84 +311,84 @@ body:not(.window-inactive) .tab-bar.single-tab > .item.default-tab:hover > .clos
     white-space: nowrap;
 }
 
-.tab-bar:not(.animating) > .item:not(.selected):hover > .title {
+.tab-bar > .tabs:not(.animating) > .item:not(.selected):hover > .title {
     color: hsla(0, 0%, 0%, 0.6);
 }
 
-.tab-bar > .item.selected > .title {
+.tab-bar > .tabs > .item.selected > .title {
     color: hsla(0, 0%, 0%, 0.7);
 }
 
-.tab-bar.collapsed > .item {
+.tab-bar > .tabs.collapsed > .item {
     justify-content: center;
 }
 
-.tab-bar.collapsed > .item:not(.pinned) > .icon {
+.tab-bar > .tabs.collapsed > .item:not(.pinned) > .icon {
     display: none;
 }
 
-.tab-bar.collapsed > .item > .flex-space {
+.tab-bar > .tabs.collapsed > .item > .flex-space {
     display: none;
 }
 
-.tab-bar.collapsed > .item > .close {
+.tab-bar > .tabs.collapsed > .item > .close {
     display: none;
     -webkit-margin-end: 0;
 }
 
-.tab-bar.collapsed > .item:hover > .close {
+.tab-bar > .tabs.collapsed > .item:hover > .close {
     display: inline-block;
     position: absolute;
 }
 
-.tab-bar.collapsed > .item.ephemeral:hover > .icon {
+.tab-bar > .tabs.collapsed > .item.ephemeral:hover > .icon {
     display: none;
 }
 
-.tab-bar.collapsed > .item.ephemeral:hover > .title {
+.tab-bar > .tabs.collapsed > .item.ephemeral:hover > .title {
     visibility: hidden;
 }
 
-.tab-bar.static-layout {
+.tab-bar > .tabs.static-layout {
     position: relative;
 }
 
-.tab-bar.static-layout > .item {
+.tab-bar > .tabs.static-layout > .item {
     position: absolute !important;
     top: 0;
 }
 
-.tab-bar.animating.closing-tab > .item {
+.tab-bar > .tabs.animating.closing-tab > .item {
     transition-property: left;
     transition-duration: 250ms;
     transition-timing-function: ease-in-out;
 }
 
-.tab-bar.animating:matches(.expanding-tabs, .inserting-tab) > .item {
+.tab-bar > .tabs.animating:matches(.expanding-tabs, .inserting-tab) > .item {
     transition-property: left, width;
     transition-duration: 250ms;
     transition-timing-function: ease-in-out;
 }
 
-.tab-bar.animating.inserting-tab > .item.being-inserted {
+.tab-bar > .tabs.animating.inserting-tab > .item.being-inserted {
     z-index: 2;
     min-width: 0 !important;
     padding: 0 !important;
 }
 
-.tab-bar.dragging-tab > .item.selected,
-.tab-bar.static-layout:not(.animating.inserting-tab):not(.dragging-tab) > .item:nth-last-child(1 of :not(.pinned)),
-.tab-bar.animating.closing-tab > .item.selected {
+.tab-bar > .tabs.dragging-tab > .item.selected,
+.tab-bar > .tabs.static-layout:not(.animating.inserting-tab):not(.dragging-tab) > .item:nth-last-child(1 of :not(.pinned)),
+.tab-bar > .tabs.animating.closing-tab > .item.selected {
     border-right: var(--tab-item-medium-border-style);
 }
 
-body.window-inactive .tab-bar.dragging-tab > .item.selected,
-body.window-inactive .tab-bar.static-layout:not(.animating.inserting-tab):not(.dragging-tab) > .item:nth-last-child(1 of :not(.pinned)),
-body.window-inactive .tab-bar.animating.closing-tab > .item.selected {
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs.dragging-tab > .item.selected,
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs.static-layout:not(.animating.inserting-tab):not(.dragging-tab) > .item:nth-last-child(1 of :not(.pinned)),
+body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs.animating.closing-tab > .item.selected {
     border-right-color: var(--tab-item-light-border-color) !important;
 }
 
-.tab-bar.dragging-tab > .item.selected {
+.tab-bar > .tabs.dragging-tab > .item.selected {
     z-index: 2;
     pointer-events: none;
 }
@@ -373,46 +406,48 @@ body.window-inactive .tab-bar.animating.closing-tab > .item.selected {
         --tab-item-extra-light-border-color: var(--tab-item-border-color);
     }
 
-    .tab-bar > .item {
+    body.docked.bottom .tab-bar > .border.top {
+        filter: brightness(120%);
+    }
+
+    .tab-bar > .tabs > .item {
         background-image: linear-gradient(to bottom, hsl(0, 0%, 12%), hsl(0, 0%, 10%));
     }
 
-    .tab-bar > .item > .title {
+    .tab-bar > .tabs > .item > .title {
         color: white !important;
     }
 
-    .tab-bar > .item:not(.disabled).selected {
+    .tab-bar > .tabs > .item:not(.disabled).selected {
         background-image: linear-gradient(to bottom, hsl(0, 0%, 23%), hsl(0, 0%, 21%));
-        border-top-color: hsl(0, 0%, 37%);
     }
 
-    .tab-bar:not(.animating) > .item:not(.selected):hover {
+    .tab-bar > .tabs:not(.animating) > .item:not(.selected):hover {
         background-image: linear-gradient(to bottom, hsl(0, 0%, 11%), hsl(0, 0%, 9%));
     }
 
-    .tab-bar > .item > .close,
-    .tab-bar > .item > .icon {
+    .tab-bar > .tabs > .item > .close,
+    .tab-bar > .tabs > .item > .icon {
         filter: var(--filter-invert);
     }
 
-    body.window-inactive .tab-bar {
+    body:matches(.window-inactive, .window-docked-inactive) .tab-bar {
         --tab-item-border-color: hsl(0, 0%, 34%);
-        border-bottom-color: var(--tab-item-border-color);
 
         background-image: none !important;
         background-color: hsl(0, 0%, 13%) !important;
     }
 
-    body.window-inactive .tab-bar > .item {
+    body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs > .item {
         background-image: none !important;
         background-color: hsl(0, 0%, 13%) !important;
     }
 
-    body.window-inactive .tab-bar > .item.selected {
+    body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs > .item.selected {
         background-color: hsl(0, 0%, 19%) !important;
     }
 
-    body.window-inactive .tab-bar > .item > .title {
+    body:matches(.window-inactive, .window-docked-inactive) .tab-bar > .tabs > .item > .title {
         color: hsl(0, 0%, 58%) !important;
     }
 }
